// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logging finalMessage should render a 'yarn' setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


[1m[32mSetup:[39m[22m
$ cd undefined/
$ yarn

[1m[32mDevelopment:[39m[22m
$ cd undefined/
$ yarn start

[1m[32mBuild Command:[39m[22m
$ cd undefined/
$ yarn build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`logging finalMessage should render an 'npm' setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


[1m[32mSetup:[39m[22m
$ cd undefined/
$ npm install

[1m[32mDevelopment:[39m[22m
$ cd undefined/
$ npm start

[1m[32mBuild Command:[39m[22m
$ cd undefined/
$ npm run build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`logging finalMessage should render an instruction message skipping the setup step 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


[1m[32mDevelopment:[39m[22m
$ cd undefined/
$ npm start

[1m[32mBuild Command:[39m[22m
$ cd undefined/
$ npm run build

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;
